# rootcast

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  compound-engineering.local.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  build.rs
backend/migrations/: 0001_initial_schema.sql  0003_proof_requested_at.sql  0004_bankai_finalized_block_number.sql
backend/src/: config.rs  db.rs  main.rs
backend/src/api/: mod.rs  read_models.rs
backend/src/bankai/: finality.rs  mod.rs  proof_bundle.rs
backend/src/chains/: evm.rs  mod.rs  solana.rs  starknet.rs
backend/src/jobs/: runner.rs  types.rs
backend/src/proving/: sp1.rs
backend/src/world_id/: mod.rs  watcher.rs
contracts/: README.md
contracts/evm/: deploy.sh
contracts/evm/src/: ISP1Verifier.sol
contracts/solana/: README.md
contracts/solana/programs/world-id-root-registry-solana/: Cargo.toml
contracts/solana/programs/world-id-root-registry-solana/src/: state.rs
contracts/solana/script/: initialize_registry.sh
contracts/starknet/: README.md  Scarb.toml  deploy.sh  snfoundry.toml
docs/brainstorms/: 2026-03-17-world-id-root-replicator-brainstorm.md
docs/plans/: 2026-03-17-001-feat-world-id-root-replicator-plan.md  2026-03-17-002-feat-world-id-root-replicator-phase-1-foundation-plan.md  2026-03-17-003-feat-world-id-root-replicator-phase-2-proving-slice-plan.md  2026-03-17-004-feat-world-id-root-replicator-phase-3-multichain-fanout-plan.md  2026-03-17-005-feat-world-id-root-replicator-phase-4-read-only-api-frontend-plan.md  2026-03-17-006-refactor-world-id-replicator-topology-ui-plan.md  2026-03-17-007-feat-solana-devnet-destination-support-plan.md  2026-03-17-007-feat-starknet-sepolia-replication-target-plan.md  2026-03-18-001-feat-deploy-sp1-v5-groth16-verifier-testnets-plan.md
docs/reports/: 2026-03-18-sp1-v5-groth16-testnet-deployments.md
frontend/: README.md  globals.css  index.html  package-lock.json  package.json  tsconfig.json
frontend/components/: dashboard-page.tsx  landing-page.tsx  navbar.tsx  pipeline-indicator.tsx  pipeline-stage-banner.tsx  recent-updates-list.tsx  replication-history-table.tsx  replication-target-card.tsx  replication-topology.tsx  root-update-card.tsx  site-footer.tsx
frontend/lib/: api.ts  chain-metadata.ts  format.ts
frontend/src/: App.tsx  main.tsx
frontend/src/pages/: Dashboard.tsx
todos/: 001-complete-p1-world-id-root-replicator-phase-1.md  002-ready-p1-world-id-root-replicator-phase-2.md  003-complete-p1-world-id-root-replicator-phase-3.md  004-complete-p1-deploy-sp1-v5-groth16-verifier-testnets.md  004-ready-p1-solana-devnet-destination-support.md  004-ready-p1-starknet-sepolia-target.md
world-id-root-replicator/: .env.example  .gitignore  Cargo.toml  README.md
world-id-root-replicator/backend/: Cargo.toml
world-id-root-replicator/backend/migrations/: 0001_initial_schema.sql  0002_replication_job_uniqueness.sql  0005_target_address_cutover.sql
world-id-root-replicator/backend/src/: config.rs  db.rs  lib.rs  main.rs
world-id-root-replicator/backend/src/api/: mod.rs  read_models.rs
world-id-root-replicator/backend/src/bankai/: proof_bundle.rs
world-id-root-replicator/backend/src/chains/: base_sepolia.rs  evm.rs  mod.rs  solana.rs  starknet.rs
world-id-root-replicator/backend/src/jobs/: runner.rs  types.rs
world-id-root-replicator/backend/src/proving/: sp1.rs
world-id-root-replicator/backend/src/world_id/: mod.rs  watcher.rs
world-id-root-replicator/contracts/: README.md  deploy.sh  foundry.toml  test_deploy_smoke.sh
world-id-root-replicator/contracts/evm/: README.md
world-id-root-replicator/contracts/script/: deploy_base_sepolia_registry.sh  deploy_registry.sh
world-id-root-replicator/contracts/solana/: Anchor.toml  package.json
world-id-root-replicator/contracts/solana/programs/world-id-root-registry-solana/src/: lib.rs
world-id-root-replicator/contracts/solana/script/: deploy.sh  preflight.sh
world-id-root-replicator/contracts/solana/tests/: root-registry.ts
world-id-root-replicator/contracts/src/: ISP1Verifier.sol  WorldIdRootRegistry.sol
world-id-root-replicator/contracts/starknet/: README.md  Scarb.toml  deploy.sh  snfoundry.toml
world-id-root-replicator/contracts/starknet/src/: lib.cairo
world-id-root-replicator/contracts/starknet/tests/: test_root_registry.cairo
world-id-root-replicator/contracts/test/: WorldIdRootRegistry.t.sol
world-id-root-replicator/frontend/: README.md  globals.css  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
world-id-root-replicator/frontend/app/: globals.css  layout.tsx  page.tsx
world-id-root-replicator/frontend/app/dashboard/: page.tsx
world-id-root-replicator/frontend/components/: auto-refresh.tsx  chain-logos.tsx  dashboard-page.tsx  landing-page.tsx  pipeline-indicator.tsx  replication-history-table.tsx  replication-target-card.tsx  replication-target-grid.tsx  replication-topology.tsx  status-badge.tsx
world-id-root-replicator/frontend/lib/: api.ts  chain-metadata.ts  format.ts  use-polling.ts
world-id-root-replicator/frontend/src/pages/: Home.tsx
world-id-root-replicator/program/: Cargo.toml
world-id-root-replicator/program/src/: main.rs
world-id-root-replicator/solana/: .gitignore  Anchor.toml  README.md  tsconfig.json
world-id-root-replicator/solana/programs/world-id-root-registry-solana/src/: lib.rs
world-id-root-replicator/solana/script/: deploy_registry.sh  initialize_registry.sh  preflight.sh
world-id-root/program/src/: main.rs
