[package]
version = "0.1.0"
name = "world-id-root-replicator-backend"
edition = "2021"
default-run = "world-id-root-replicator-backend"

[[bin]]
name = "world-id-root-replicator-backend"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.7.9"
sp1-sdk = { workspace = true }
bincode = "1.3.3"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { workspace = true }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
hex = "0.4.3"
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
alloy-network = "1.0.29"
alloy-provider = { version = "1.0.29", default-features = false, features = ["reqwest", "reqwest-rustls-tls"] }
alloy-rpc-types-eth = { version = "1.0.29", default-features = false, features = ["serde", "serde-bincode-compat"] }
alloy-signer-local = "1.0.29"
dotenv = "0.15.0"
bankai-sdk = { workspace = true }
bankai-types = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "time"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
ethereum_hashing = { git = "https://github.com/bankaixyz/ethereum_hashing", rev = "c457c3e", default-features = false, features = ["portable"] }

[build-dependencies]
sp1-build = { workspace = true }
