[package]
version = "0.1.0"
name = "world-id-root-replicator-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-zkvm = { workspace = true }
bankai-verify = { workspace = true }
bankai-types = { workspace = true }
ethereum_hashing = { workspace = true }
alloy-primitives = { workspace = true }
serde = { workspace = true }
