[package]
name = "world-id-root-registry-solana"
version = "0.1.0"
description = "Solana Devnet root registry for the World ID root replicator"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "world_id_root_registry_solana"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
sp1-solana = { git = "https://github.com/succinctlabs/sp1-solana" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
